<resources>
    <string name="app_name">Mrt7al</string>
    <string name="icon_namez">مُرتحل</string>
    <string name="contentdescription">TODO</string>
    <string name="txt_todo">TODO</string>
    <string name="txt_high_hill_manali">High Hill Manali</string>
    <string name="txt_4_days_3_nights">4 Days 3 Nights</string>
    <string name="txt_new_package">الباقات الجديدة</string>
    <string name="_500"><strike>$ 500</strike></string>
    <string name="txt_03_bus_available">4 حافلات متاحة</string>
    <string name="text_seat">مقعد</string>
    <string name="msg_shareapp">Hey check out my app at: https://play.google.com/store/apps/developer?id=com.mrt7l</string>
    <string name="send_to">المشاركة بواسطة</string>
    <string name="txtYourCode">الكود الخاص بك :</string>
    <string name="txtTotalEarning">Total Earning</string>
    <string name="txt_your_link">الرابط الخاص</string>
    <string name="permission_request">يجب قبول تصريح الموقع من اجل تحديد اقرب المحطات لك</string>
    <string name="text_get_100_when_your_friend_complete_trip_with_us">Get $100 when your friend completes a trip with us</string>
    <string name="hint_enter_your_contact_number">ادخل رقم الجوال </string>
    <string name="lbl_email">البريد الالكتروني</string>
    <string name="txt_emailid">John@gmail.com</string>
    <string name="lbl_wallet">شارك اصدقائك لتحصل على رصيد مجاني</string>
    <string name="lbl_your_wallet_in_balance">Your Balance in the wallet</string>
    <string name="txt_visa">VISA</string>
    <string name="title_price">سعر التذكرة</string>
    <string name="text_confirmed">تم التأكيد</string>
    <string name="text_destination">Ahmedabad (Guj) To High Hill,Manali</string>
    <string name="hint_from_city">من مدينة</string>
    <string name="hint_to_city">الى مدينة</string>
    <string name="txt_view_all">مشاهدة الكل</string>
    <string name="txt_new_offers">العروض الجديدة</string>
    <string name="txt_popular_package">الباقات المشهورة</string>
    <string name="title_email_notification_settings">اعدادات اشعارات البريد الالكتروني</string>
    <string name="txt_email_notification">اشعارات البريد الالكتروني</string>
    <string name="lbl_contact_number_settings">اعدادات اشعارات رقم المساعدة</string>
    <string name="lbl_mobile_no">رقم الجوال :</string>
    <string name="lbl_number_notification">إشعارات الجوال</string>
    <string name="title_language_setting">اعدادات اللغة</string>
    <string name="lbl_language">اللغة :</string>
    <string name="txt_english_us">English-US</string>
    <string name="lbl_first_name">الأسم الاول</string>
    <string name="lbl_last_name">اسم الوالد</string>
    <string name="gps_isnot_highpriority">جي بي اس ليس في وضع عالي الدقة</string>
    <string name="please_make_high_priority">من فضلك قم بتغيير وضع خدمة الموقع الى عالي الدقة</string>
    <string name="lbl_gender">الجنس</string>
    <string name="dialog_no_gps">تأكد من تشغيل خدمة الموقع</string>
    <string name="dialog_exit">اغلاق</string>
    <string name="title_edit_your_name">تعديل الاسم </string>
    <string name="title_edit_your_contact">تعديل رقم الاتصال</string>
    <string name="lbl_total_fare">الاجمالى</string>
    <string name="lbl_pnr_no">الرقم التسلسلي</string>
    <string name="txt_bustime">18:00</string>
    <string name="txt_time">8:00</string>
    <string name="txt_date">28-May-2019</string>
    <string name="tite_toolbar_cards">البطاقات</string>
    <string name="lbl_help_support">المساعدة والدعم</string>
    <string name="hint_enter_your_emailid">ادخل البريد الالكتروني</string>
    <string name="txt_samay_travel_main_office">Samay Travel Main Office</string>
    <string name="txt_near_alim_chowk_manali">Near Alim Chowk,Manali</string>
    <string name="txt_ticket_no">رقم التذكرة</string>
    <string name="msg_email_required">البريد الالكتروني مطلوب</string>
    <string name="msg_email_valid">من فضلك قم بادخال بريد الكتروني صالح</string>
    <string name="msg_first_name">الاسم الاول مطلوب</string>
    <string name="msg_last_name">الاسم الاخير مطلوب</string>
    <string name="msg_mobile_number">رقم الجوال مطلوب</string>
    <string name="msg_email_id">البريد الالكتروني مطلوب</string>
    <string name="hint_email">ادخل البريد الالكتروني</string>
    <string name="ahmedabad_guj_high_hill_manali">Ahmedabad(Guj)- High Hill,Manali,Gujarat India</string>
    <string name="volvo_bus">Volvo Bus</string>
    <string name="txtCancelled">الحجوزات السابقة</string>
    <string name="txtColon">:</string>
    <string name="search">بحث</string>
    <string name="lbl_special">خاص</string>
    <string name="lbl_use_code">استخدم الكود :</string>
    <string name="lbl_notification">الاشعارات</string>
    <string name="lbl_verification">تم ارسال رمز التفعيل الي جوالك</string>
    <string name="txt_verify">تطبيق</string>
    <string name="dialog_no_inter_message">خدمة الانترنت لا تعمل</string>
    <string name="dialog_no_gps_messgae"> خدمة الموقع لا تعمل</string>
    <string name="dialog_enable_gps">تشغيل خدمة الموقع</string>
    <string name="dialog_enable_location_service">الذهاب لخدمة الموقع</string>
    <string name="dialog_enable_3g">تشغيل البيانات</string>
    <string name="dialog_enable_wifi">تشغيل الواي فاي</string>
    <string name="install_playservices">من فضلك قم بتثبيت خدمات جوجل لتستطيع استخدام البرنامج</string>
    <string name="checkgps">تأكد من تشغيل خدمة الموقع</string>
    <string name="txt_Resend">إعادة ارسال الرمز</string>
    <string name="lbl_StarRatings">التقييم</string>
    <string name="txt_BusType">نوع الحافلة</string>
    <string name="lbl_Apply">تفعيل</string>
    <string name="text_you_want_to">اهلا بك في</string>
    <string name="text_travel">مرتحل</string>
    <string name="hint_mobile">ادخل رقم الجوال</string>
    <string name="lbl_continue">متابعة</string>
    <string name="text_signinwith">الدخول عن طريق</string>
    <string name="verification">التفعيل</string>
    <string name="refere_and_earn">شارك واربح</string>
    <string name="profile_settings">تعديل الصفحة الشخصية</string>
    <string name="lbl_profile_settings">تعديل الصفحة الشخصية</string>
    <string name="lbl__wallet">المحفظة</string>
    <string name="lbl_cards">البطاقات</string>
    <string name="lbl_help">مساعدة</string>
    <string name="lbl_2342340">2342340</string>
    <string name="lbl_submit">تأكيد</string>
    <string name="home">الرئيسية</string>
    <string name="text_book_now">إحجز الأن</string>
    <string name="text_contact_information">معلومات الاتصال</string>
    <string name="text_phone">رقم الجوال</string>
    <string name="hint_phone">055 xxxxxxx</string>
    <string name="txt_passenger">الراكب</string>
    <string name="hint_enter_name">ادخل الاسم</string>
    <string name="hint_enter_age">ادخل العمر</string>
    <string name="hint_card_number">رقم البطاقة</string>
    <string name="_200">$200.00</string>
    <string name="_1">1</string>
    <string name="text_select_month">شهر</string>
    <string name="text_select_year">سنة</string>
    <string name="text_card_holder_name">اسم حامل البطاقة</string>
    <string name="text_valid">صالح</string>
    <string name="lbl_ac">AC</string>
    <string name="lbl_non_ac">NON-AC</string>
    <string name="lbl_sleeper">SLEEPER</string>
    <string name="lbl_seater">SEATER</string>
    <string name="lbl_payment">الدفع</string>
    <string name="txt_cancelled">الحجوزات الملغاة</string>
    <string name="text_available">متاح</string>
    <string name="text_booked">الحجوزات الحالية</string>
    <string name="text_pickup_point">نقاط الالتقاء</string>
    <string name="text_dropping_points">نقاط الوصول</string>
    <string name="text_selected">تم الاختيار</string>
    <string name="lbl_35">$35</string>
    <string name="smith_travels">Smith travels</string>
    <string name="text_net_banking">الحساب البنكي</string>
    <string name="text_offers">العروض</string>
    <string name="text_credit_card">بطاقة الائتمان</string>
    <string name="text_debit">البطاقة المدفوعة مقدما</string>
    <string name="text_Mobilewallet">المحفظة الالكترونية</string>
    <string name="text_bus_list">الحافلات</string>
    <string name="hint_enter_first_name">ادخل الأسم الاول</string>
    <string name="hint_enter_last_name">ادخل الاسم الأخير</string>
    <string name="text_save">حفظ البيانات</string>
    <string name="text_ticket_book">ادفع الأن</string>
    <string name="text_total_amount">اجماللي الكمية</string>
    <string name="txt_copy">Copied</string>
    <string name="text_offercode">كود الخصم</string>
    <string name="text_package">الباقات</string>
    <string name="msg_from">من المدينة مطلوب</string>
    <string name="msg_to">الي مدينة مطلوب</string>
    <string name="msg_name">الأسم مطلوب </string>
    <string name="ms_age">العمر مطلوب</string>
    <string name="msg_digit">رقم البطاقة مطلوب</string>
    <string name="msg_code">الكود مطلوب</string>
    <string name="msg_holdername">اسم الحافظة مطلوب</string>
    <string name="text_hour">ساعة</string>
    <string name="rs">$ </string>
    <string name="text_link">www.bus.com/refer/234556F</string>
    <string name="text_remove">Item was removed from the list.</string>
    <string name="text_undo">تراجع</string>
    <string name="title_add_new_card">اضافة بطاقة جديدة</string>
    <string name="title_wallet">المحفظة</string>
    <string name="text_trending_packages">الباقات المميزة</string>
    <string name="text_description">الوصف</string>
    <string name="text_upper">اكبر</string>
    <string name="text_lower">اقل</string>
    <string name="text_ladies">سيدات</string>
    <string name="text_logout">تسجيل الخروج</string>
    <string name="text_100">0</string>
    <string name="text_500">500</string>
    <string name="msg_saved">Saved</string>
    <string name="text_confirmation">تأكيد !</string>
    <string name="msg_logout">هل انت متأكد تريد تسجيل الخروج</string>
    <string name="text_yes">موافق</string>
    <string name="text_no">لا</string>
    <string name="text_totalseat">اجمالي المقاعد:</string>
    <string name="text_cvv">CVV</string>
    <string name="text_seat_no">رقم الكرسي</string>
    <string name="_5">/5</string>
    <string name="text_5">5</string>
    <string name="text_addcard">اضافة بطاقة</string>
    <string name="text_settings">الاعدادات</string>
    <string name="text_select_bus">اختر المقعد</string>
    <string name="text_hold">معلق</string>
    <string name="text_ticket_price">سعر التذكرة  </string>
    <string name="ticket_prices">اسعار التذاكر </string>
    <string name="less_details">عرض اقل</string>
    <string name="text_tax">الضريبة :</string>
    <string name="text_5txt">$5</string>
    <string name="text_total_price">الاجمالي :</string>
    <string name="text__2">2</string>
    <string name="text_mobile">+91 9988998899</string>
    <string name="text_duration">المدة</string>
    <string name="text_payment">الدفع</string>
    <string name="text_done">تم</string>
    <string name="text_payment_success">تم الدفع بنجاح</string>
    <string name="text_close">اغلاق</string>
    <string name="text_cardadd">تم اضافة البطاقة</string>
    <string name="msg_success">نشكرك على الحجز معنا .. استمتع برحلتك</string>
    <string name="text_version_beta">Beta Version</string>
    <string name="reserve_me">حجز الرحلة لي</string>
    <string name="reserve_another">حجز رحلة لمسافرين تابعين</string>
    <string name="reserve_else">حجز الرحلة لمسافر جديد</string>
    <string name="passport_num">رقم الجواز</string>
    <string name="all">الكل</string>
    <string name="vipbus">باصات VIP</string>
    <string name="economy_bus">باصات اقتصادي</string>
    <string name="name">الأسم</string>
    <string name="direct">مباشر</string>
    <string name="un_direct">غير مباشر</string>
    <string name="filter">تصفية</string>
    <string name="whereto">الوجهة</string>
    <string name="company">الشركة</string>
    <string name="price">السعر</string>
    <string name="from">من</string>
    <string name="to">الى</string>
    <string name="delete_all">مسح الكل</string>
    <string name="type">النوع</string>
</resources>