<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl"
    android:overScrollMode="always"
    android:scrollbarAlwaysDrawVerticalTrack="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:layoutDirection="rtl"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="wrap_content"
            android:layout_height="280dp"
            android:contentDescription="@string/contentdescription"
            android:src="@drawable/white_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="45sp"
            android:letterSpacing="0.3"
            android:textStyle="bold"
            android:visibility="gone"
            android:textColor="@color/colorPrimary"
            android:text="@string/icon_namez"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_marginTop="18dp"
            android:visibility="invisible"
             android:textColor="@color/colorPrimary"
            android:text="@string/text_version_beta"
            />
    </LinearLayout>

</LinearLayout>

