<?xml version="1.0" encoding="utf-8"?>
<layout >

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black_trans_dark"
        xmlns:app="http://schemas.android.com/apk/res-auto">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/grey_background"
            xmlns:app="http://schemas.android.com/apk/res-auto">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/filter"
                android:textSize="16sp"
                android:textColor="@color/colorPrimary"
                android:layout_marginStart="14dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="14dp"
                android:id="@+id/filterTitle"
                android:layout_marginTop="10dp"
                android:textStyle="bold"

                />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/filterTitle"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/whereto"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_marginStart="14dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="14dp"
                android:textStyle="bold"
                android:id="@+id/destinationTitle"
                android:layout_marginTop="10dp"

                />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/destinationTitle"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/directLayout"
            app:layout_constraintEnd_toEndOf="parent"
            android:layoutDirection="rtl"
            android:layout_marginStart="14dp"
            >
            <CheckBox
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/dark_gray"
                android:text="@string/direct"
                android:id="@+id/direct"
                />

            <CheckBox
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/dark_gray"
                android:text="@string/un_direct"
                android:id="@+id/unDirect"
                />

        </androidx.appcompat.widget.LinearLayoutCompat>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/directLayout"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/txt_BusType"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_marginStart="14dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="14dp"
                android:textStyle="bold"
                android:id="@+id/busTypeTitle"
                android:layout_marginTop="10dp"

                />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/busTypeTitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/busTypeLayout"
                android:layout_marginStart="14dp"
                android:layoutDirection="rtl"
                >
                <CheckBox
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/all"
                    android:textColor="@color/dark_gray"
                    android:text="@string/all"/>

                <CheckBox
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/dark_gray"
                    android:text="@string/economy_bus"
                    android:id="@+id/economy"
                    />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/dark_gray"
                android:layoutDirection="rtl"
                android:layout_marginStart="14dp"
                app:layout_constraintTop_toBottomOf="@+id/busTypeLayout"
                android:text="@string/vipbus"
                android:id="@+id/vip"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/vip"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/company"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_marginStart="14dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="14dp"
                android:textStyle="bold"
                android:id="@+id/companyTitle"
                android:layout_marginTop="10dp"

                />


            <Spinner
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/comapaniesSpinner"
                app:layout_constraintTop_toBottomOf="@+id/companyTitle"
                android:paddingStart="8dp"
                 android:paddingEnd="8dp"
                android:layoutDirection="rtl"
                android:layout_marginStart="14dp"
                android:layout_marginEnd="14dp"
                android:paddingBottom="12dp"
                android:textColor="@color/dark_gray"
                android:textSize="13sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"

                />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/comapaniesSpinner"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/price"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_marginStart="14dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="14dp"
                android:textStyle="bold"
                android:id="@+id/priceTitle"
                android:layout_marginTop="10dp"

                />



            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/priceTitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/priceLayout"
                android:layout_marginTop="10dp"
                >

              <EditText
                  android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:layout_weight="1"
                  android:background="@drawable/bg_border"
                  android:hint="@string/to"
                  android:paddingStart="8dp"
                  android:paddingEnd="8dp"
                  android:id="@+id/priceTo"
                  android:paddingTop="4dp"
                  android:paddingBottom="4dp"
                  android:inputType="number"
                  android:layout_marginStart="70dp"
                  />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/bg_border"
                    android:hint="@string/from"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:id="@+id/priceFrom"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="30dp"
                    android:inputType="number"
                    />

            </androidx.appcompat.widget.LinearLayoutCompat>


            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/priceLayout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="25dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="15dp"
                >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                     android:hint="@string/delete_all"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:paddingTop="6dp"
                    android:gravity="center"
                    android:id="@+id/clearAll"
                    android:paddingBottom="6dp"
                     android:textColor="@color/dark_gray"
                    android:layout_marginStart="60dp"
                    android:layout_marginEnd="20dp"
                    />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.4"
                    android:background="@drawable/bg_btn_shape"
                     android:paddingStart="8dp"
                    android:text="@string/filter"
                    android:gravity="center"
                    android:paddingEnd="8dp"
                    android:paddingTop="6dp"
                    android:paddingBottom="6dp"
                    android:id="@+id/search"
                     android:layout_marginEnd="30dp"
                     android:textColor="@color/white"

                    />

            </androidx.appcompat.widget.LinearLayoutCompat>





        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>